# postgres_homework

homework-1/: create_tables.sql  main.py  pyproject.toml  settings.py
homework-1/north_data/: customers_data.csv  employees_data.csv  orders_data.csv
homework-3/: queries.sql
homework-4/: alter_northwind.sql  alter_student.sql
